# numeraire

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: .gitignore  architecture.md  comparison.md  conf.py  ecosystem.md  examples.md  extending.md  getting-started.md  index.md  installation.md  quickstart.md  related-projects.md  user-guide.md
docs/api/: adapters.skfolio.md  baselines.md  comparison.md  core.capabilities.md  core.data.md  core.engine.md  core.evaluators.md  core.protocols.md  core.registry.md  core.schema.md  core.simulate.md  core.sorts.md  core.splitter.md  core.stats.md  index.md  numeraire.md  reference.md  testing.md
src/numeraire/: __init__.py  comparison.py  golden.py  reference.py  testing.py
src/numeraire/adapters/: __init__.py  skfolio_adapter.py
src/numeraire/baselines/: __init__.py  forecast.py  weights.py
src/numeraire/core/: __init__.py  _ingest.py  capabilities.py  data.py  engine.py  evaluators.py  protocols.py  registry.py  schema.py  simulate.py  sorts.py  splitter.py  stats.py
src/numeraire/methods/: __init__.py  conservative_slope.py
tests/: conftest.py  test_backtest_dispatch.py  test_baselines.py  test_char_blocks.py  test_comparison.py  test_cross_section_view.py  test_data.py  test_economic_value.py  test_engine.py  test_evaluators.py  test_fold_isolation.py  test_golden.py  test_horizon_contract.py  test_ingest_seam.py  test_input_ingestion.py  test_label_alignment.py  test_log_return_contract.py  test_method_conservative_slope.py  test_missing_return_policy.py  test_multiblock_view.py  test_no_lookahead.py  test_no_lookahead_engine.py  test_panel_internals.py  test_parallel.py  test_pit_properties.py  test_pricing.py  test_reference.py  test_refit_and_validation.py  test_risk_adjusted_evaluators.py  test_simulate.py  test_skfolio_adapter.py  test_sorts.py  test_spine.py  test_splitter.py  test_stats.py  test_testing.py  test_view_combinations.py  test_vintaged_block.py  test_walk_forward_panel.py
