[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "numeraire"
dynamic = ["version"]
description = "A research framework for backtesting, comparing, and replicating empirical asset-pricing methods."
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [{ name = "Yuheng Wu", email = "wuyuheng20074@live.com" }]
keywords = ["asset-pricing", "factor-models", "stochastic-discount-factor", "backtesting", "econometrics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
ipca = ["ipca>=0.6"]
linearmodels = ["linearmodels>=6.0"]
all = ["numeraire[ipca,linearmodels]"]
dev = [
  "pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.0",
  "ruff>=0.6", "basedpyright>=1.18", "import-linter>=2.0",
  "pre-commit>=3.7", "build>=1.2", "pandas-stubs>=2.0",
]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

# Methods bundled in the repo register themselves via entry points (open registry, §2.5).
# External packages (numeraire-yourlab, numeraire-<method>) register the same way.
[project.entry-points."numeraire.methods"]
# (none yet — methods land here as they are wired in)

[project.urls]
Homepage = "https://github.com/py-numeraire/numeraire"
Repository = "https://github.com/py-numeraire/numeraire"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/numeraire"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY", "PD", "RUF"]

[tool.basedpyright]
typeCheckingMode = "strict"
include = ["src/numeraire/core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=numeraire --cov-report=term-missing"

[tool.coverage.run]
source = ["src/numeraire/core"]

# --- the architecture boundary, as a lint rule (§2.1) ---
[tool.importlinter]
root_package = "numeraire"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "core must not depend on methods, adapters, or reference libraries"
type = "forbidden"
source_modules = ["numeraire.core"]
forbidden_modules = [
  "numeraire.methods",
  "numeraire.adapters",
  "ipca",
  "linearmodels",
]
