[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "numeraire"
dynamic = ["version"]
description = "A research framework for backtesting, comparing, and replicating empirical asset-pricing methods."
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [{ name = "Yuheng Wu", email = "wuyuheng20074@live.com" }]
keywords = [
  "asset pricing",
  "portfolio",
  "backtesting",
  "empirical finance",
  "factor models",
  "replication",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Office/Business :: Financial :: Investment",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.2",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.0",
  "ruff>=0.6", "basedpyright>=1.18", "import-linter>=2.0",
  "pre-commit>=3.7", "build>=1.2", "pandas-stubs>=2.0", "twine>=5.0",
]
docs = [
  "sphinx>=7.3",
  "pydata-sphinx-theme>=0.15",
  "myst-parser>=3.0",
]
skfolio = ["skfolio>=0.5"]

# Ecosystem convenience extras — pull in the sibling packages (each depends back on numeraire).
# `pip install numeraire` stays the minimal spine; opt into the plotting / data companions here.
graphics = ["numeraire-graphics>=0.1"]
data = ["numeraire-dataset>=0.1"]
all = ["numeraire-graphics>=0.1", "numeraire-dataset>=0.1"]

# Methods bundled in the repo register themselves via entry points (open registry).
# External packages (numeraire-yourlab, numeraire-<method>) register the same way.
# The universal baselines dogfood the discovery mechanism (snake + CamelCase names).
[project.entry-points."numeraire.methods"]
equal_weight = "numeraire.baselines:EqualWeight"
EqualWeight = "numeraire.baselines:EqualWeight"
min_variance = "numeraire.baselines:MinVariance"
MinVariance = "numeraire.baselines:MinVariance"
mean_variance = "numeraire.baselines:MeanVariance"
MeanVariance = "numeraire.baselines:MeanVariance"
historical_mean = "numeraire.baselines:HistoricalMean"
HistoricalMean = "numeraire.baselines:HistoricalMean"

[project.urls]
Homepage = "https://github.com/py-numeraire/numeraire"
Documentation = "https://numeraire.py-numeraire.org/"
Repository = "https://github.com/py-numeraire/numeraire"
Issues = "https://github.com/py-numeraire/numeraire/issues"
Changelog = "https://github.com/py-numeraire/numeraire/blob/main/CHANGELOG.md"
Releases = "https://github.com/py-numeraire/numeraire/releases"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/numeraire"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY", "PD", "RUF"]

[tool.basedpyright]
typeCheckingMode = "strict"
include = ["src/numeraire/core", "src/numeraire/baselines"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=numeraire --cov-report=term-missing"

[tool.coverage.run]
source = ["src/numeraire/core"]

# --- the architecture boundary, as a lint rule ---
[tool.importlinter]
root_package = "numeraire"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "core must not depend on methods, adapters, baselines, or reference libraries"
type = "forbidden"
source_modules = ["numeraire.core"]
forbidden_modules = [
  "numeraire.methods",
  "numeraire.adapters",
  "numeraire.baselines",
]

[dependency-groups]
dev = [
    "scipy-stubs>=1.17.1.5",
]
